overflow on footer issue fix (p2)

--- a/TournamentPlanner.Interactor/src/app/add-tournament/add-tournament.component.scss
+++ b/TournamentPlanner.Interactor/src/app/add-tournament/add-tournament.component.scss
@@ -1,7 +1,6 @@
 .container {
     height: 100%;
     // border: 1px solid red;
-    overflow: auto;
 }
 
 .header{
